// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfirmSwapModal/Error > renders %p correctly, with error= %p classic trade 0 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c0 {
  height: 24px;
  width: 24px;
}

.c0 path {
  background: rgba(19, 19, 19, 0.63);
  fill: rgba(19, 19, 19, 0.63);
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665593 _gap-t-space-spa94665593"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface3 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _height-t-size-spac100347366 _width-t-size-spac100347366 _alignItems-center _justifyContent-center _mb-t-space-spa94665589"
      >
        <svg
          class="c0"
          data-testid="pending-modal-failure-icon"
          fill="rgba(19, 19, 19, 0.63)"
          viewBox="0 0 28 28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m25.2086 20.0103-7.7081-14.41555c-1.4933-2.793-5.5055-2.793-7 0l-7.70806 14.41555c-1.36966 2.562.49005 5.6559 3.40088 5.6559h15.61438c2.9097 0 4.7706-3.095 3.4009-5.6559zm-12.0831-8.3441c0-.483.392-.875.875-.875s.875.392.875.875v4.6667c0 .483-.392.875-.875.875s-.875-.392-.875-.875zm.8984 9.3333c-.644 0-1.1727-.5226-1.1727-1.1666s.517-1.1667 1.161-1.1667h.0117c.6452 0 1.1667.5227 1.1667 1.1667s-.5227 1.1666-1.1667 1.1666z"
            fill="#9b9b9b"
          />
        </svg>
      </div>
      <span
        class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-t-space-spa94665593 _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _lineHeight-f-lineHeigh1262266530 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Token approval failed
      </span>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        A network or connection issue likely caused your approval to fail. Check your connection and try again.
      </span>
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap56 _justifyContent-center _alignItems-center"
      >
        <div
          align="center"
          class="c1 c2"
          gap="sm"
          justify="center"
        >
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 ABC
          </div>
          <svg
            fill="none"
            height="12px"
            stroke="#131313"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
            <polyline
              points="12 5 19 12 12 19"
            />
          </svg>
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 DEF
          </div>
        </div>
        <div
          class="is_TouchableTextLink _transform-0active-scale11281 _containerType-_platformweb_normal _outlineColor-0focus-visible-neutral3 _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-transparent _cursor-pointer _outlineStyle-none _borderTopLeftRadius-t-radius-no3511 _borderTopRightRadius-t-radius-no3511 _borderBottomRightRadius-t-radius-no3511 _borderBottomLeftRadius-t-radius-no3511 t_group_item"
          role="button"
          tabindex="-1"
        >
          <a
            class="font_button _color-0focus-accent1Hove112785 _textDecorationColor-0focus-accent1Hove112785 _textDecorationLine-0focus-underline _textDecorationDistance-0focus-1px _color-_groupitem-focusVisible_accent1Hove112785 _textDecorationColor-_groupitem-focusVisible_accent1Hove112785 _textDecorationLine-_groupitem-focusVisible_underline _textDecorationDistance-_groupitem-focusVisible_1px _color-_groupitem-hover_accent1Hove112785 _textUnderlinePosition-_platformweb_from-font _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-accent1 _fontFamily-f-family _wordWrap-break-word _textDecorationLine-none _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _outlineStyle-none _textAlign-center"
            data-disable-theme="true"
            href="https://support.uniswap.org/hc/en-us/articles/8120520483085-What-is-an-approval-transaction?product_link=web"
            role="link"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <button
        class="is_Button  t_group_item"
        dd-action-name="Try again"
        style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 12px 16px 12px 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; gap: 8px; min-height: 48px; margin-top: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
      >
        <span
          class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
          line-height-disabled="false"
        >
          Try again
        </span>
      </button>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`ConfirmSwapModal/Error > renders %p correctly, with error= %p classic trade 1 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c0 {
  height: 24px;
  width: 24px;
}

.c0 path {
  background: rgba(19, 19, 19, 0.63);
  fill: rgba(19, 19, 19, 0.63);
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665593 _gap-t-space-spa94665593"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface3 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _height-t-size-spac100347366 _width-t-size-spac100347366 _alignItems-center _justifyContent-center _mb-t-space-spa94665589"
      >
        <svg
          class="c0"
          data-testid="pending-modal-failure-icon"
          fill="rgba(19, 19, 19, 0.63)"
          viewBox="0 0 28 28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m25.2086 20.0103-7.7081-14.41555c-1.4933-2.793-5.5055-2.793-7 0l-7.70806 14.41555c-1.36966 2.562.49005 5.6559 3.40088 5.6559h15.61438c2.9097 0 4.7706-3.095 3.4009-5.6559zm-12.0831-8.3441c0-.483.392-.875.875-.875s.875.392.875.875v4.6667c0 .483-.392.875-.875.875s-.875-.392-.875-.875zm.8984 9.3333c-.644 0-1.1727-.5226-1.1727-1.1666s.517-1.1667 1.161-1.1667h.0117c.6452 0 1.1667.5227 1.1667 1.1667s-.5227 1.1666-1.1667 1.1666z"
            fill="#9b9b9b"
          />
        </svg>
      </div>
      <span
        class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-t-space-spa94665593 _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _lineHeight-f-lineHeigh1262266530 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Permit approval failed
      </span>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Permit2 allows token approvals to be shared and managed across different applications.
      </span>
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap56 _justifyContent-center _alignItems-center"
      >
        <div
          align="center"
          class="c1 c2"
          gap="sm"
          justify="center"
        >
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 ABC
          </div>
          <svg
            fill="none"
            height="12px"
            stroke="#131313"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
            <polyline
              points="12 5 19 12 12 19"
            />
          </svg>
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 DEF
          </div>
        </div>
        <div
          class="is_TouchableTextLink _transform-0active-scale11281 _containerType-_platformweb_normal _outlineColor-0focus-visible-neutral3 _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-transparent _cursor-pointer _outlineStyle-none _borderTopLeftRadius-t-radius-no3511 _borderTopRightRadius-t-radius-no3511 _borderBottomRightRadius-t-radius-no3511 _borderBottomLeftRadius-t-radius-no3511 t_group_item"
          role="button"
          tabindex="-1"
        >
          <a
            class="font_button _color-0focus-accent1Hove112785 _textDecorationColor-0focus-accent1Hove112785 _textDecorationLine-0focus-underline _textDecorationDistance-0focus-1px _color-_groupitem-focusVisible_accent1Hove112785 _textDecorationColor-_groupitem-focusVisible_accent1Hove112785 _textDecorationLine-_groupitem-focusVisible_underline _textDecorationDistance-_groupitem-focusVisible_1px _color-_groupitem-hover_accent1Hove112785 _textUnderlinePosition-_platformweb_from-font _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-accent1 _fontFamily-f-family _wordWrap-break-word _textDecorationLine-none _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _outlineStyle-none _textAlign-center"
            data-disable-theme="true"
            href="https://support.uniswap.org/hc/en-us/articles/8120520483085-What-is-an-approval-transaction?product_link=web"
            role="link"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <button
        class="is_Button  t_group_item"
        dd-action-name="Try again"
        style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 12px 16px 12px 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; gap: 8px; min-height: 48px; margin-top: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
      >
        <span
          class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
          line-height-disabled="false"
        >
          Try again
        </span>
      </button>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`ConfirmSwapModal/Error > renders %p correctly, with error= %p classic trade 3 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c0 {
  height: 24px;
  width: 24px;
}

.c0 path {
  background: rgba(19, 19, 19, 0.63);
  fill: rgba(19, 19, 19, 0.63);
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665593 _gap-t-space-spa94665593"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface3 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _height-t-size-spac100347366 _width-t-size-spac100347366 _alignItems-center _justifyContent-center _mb-t-space-spa94665589"
      >
        <svg
          class="c0"
          data-testid="pending-modal-failure-icon"
          fill="rgba(19, 19, 19, 0.63)"
          viewBox="0 0 28 28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m25.2086 20.0103-7.7081-14.41555c-1.4933-2.793-5.5055-2.793-7 0l-7.70806 14.41555c-1.36966 2.562.49005 5.6559 3.40088 5.6559h15.61438c2.9097 0 4.7706-3.095 3.4009-5.6559zm-12.0831-8.3441c0-.483.392-.875.875-.875s.875.392.875.875v4.6667c0 .483-.392.875-.875.875s-.875-.392-.875-.875zm.8984 9.3333c-.644 0-1.1727-.5226-1.1727-1.1666s.517-1.1667 1.161-1.1667h.0117c.6452 0 1.1667.5227 1.1667 1.1667s-.5227 1.1666-1.1667 1.1666z"
            fill="#9b9b9b"
          />
        </svg>
      </div>
      <span
        class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-t-space-spa94665593 _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _lineHeight-f-lineHeigh1262266530 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Swap failed
      </span>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Try adjusting slippage to a higher value.
      </span>
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap56 _justifyContent-center _alignItems-center"
      >
        <div
          align="center"
          class="c1 c2"
          gap="sm"
          justify="center"
        >
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 ABC
          </div>
          <svg
            fill="none"
            height="12px"
            stroke="#131313"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
            <polyline
              points="12 5 19 12 12 19"
            />
          </svg>
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 DEF
          </div>
        </div>
        <div
          class="is_TouchableTextLink _transform-0active-scale11281 _containerType-_platformweb_normal _outlineColor-0focus-visible-neutral3 _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-transparent _cursor-pointer _outlineStyle-none _borderTopLeftRadius-t-radius-no3511 _borderTopRightRadius-t-radius-no3511 _borderBottomRightRadius-t-radius-no3511 _borderBottomLeftRadius-t-radius-no3511 t_group_item"
          role="button"
          tabindex="-1"
        >
          <a
            class="font_button _color-0focus-accent1Hove112785 _textDecorationColor-0focus-accent1Hove112785 _textDecorationLine-0focus-underline _textDecorationDistance-0focus-1px _color-_groupitem-focusVisible_accent1Hove112785 _textDecorationColor-_groupitem-focusVisible_accent1Hove112785 _textDecorationLine-_groupitem-focusVisible_underline _textDecorationDistance-_groupitem-focusVisible_1px _color-_groupitem-hover_accent1Hove112785 _textUnderlinePosition-_platformweb_from-font _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-accent1 _fontFamily-f-family _wordWrap-break-word _textDecorationLine-none _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _outlineStyle-none _textAlign-center"
            data-disable-theme="true"
            href="https://support.uniswap.org/hc/en-us/articles/8643975058829-Why-did-my-transaction-fail-?product_link=web"
            role="link"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <button
        class="is_Button  t_group_item"
        dd-action-name="Try again"
        style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 12px 16px 12px 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; gap: 8px; min-height: 48px; margin-top: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
      >
        <span
          class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
          line-height-disabled="false"
        >
          Try again
        </span>
      </button>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`ConfirmSwapModal/Error > renders %p correctly, with error= %p classic trade 4 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c0 {
  height: 24px;
  width: 24px;
}

.c0 path {
  background: rgba(19, 19, 19, 0.63);
  fill: rgba(19, 19, 19, 0.63);
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665593 _gap-t-space-spa94665593"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface3 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _height-t-size-spac100347366 _width-t-size-spac100347366 _alignItems-center _justifyContent-center _mb-t-space-spa94665589"
      >
        <svg
          class="c0"
          data-testid="pending-modal-failure-icon"
          fill="rgba(19, 19, 19, 0.63)"
          viewBox="0 0 28 28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m25.2086 20.0103-7.7081-14.41555c-1.4933-2.793-5.5055-2.793-7 0l-7.70806 14.41555c-1.36966 2.562.49005 5.6559 3.40088 5.6559h15.61438c2.9097 0 4.7706-3.095 3.4009-5.6559zm-12.0831-8.3441c0-.483.392-.875.875-.875s.875.392.875.875v4.6667c0 .483-.392.875-.875.875s-.875-.392-.875-.875zm.8984 9.3333c-.644 0-1.1727-.5226-1.1727-1.1666s.517-1.1667 1.161-1.1667h.0117c.6452 0 1.1667.5227 1.1667 1.1667s-.5227 1.1666-1.1667 1.1666z"
            fill="#9b9b9b"
          />
        </svg>
      </div>
      <span
        class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-t-space-spa94665593 _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _lineHeight-f-lineHeigh1262266530 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Wrap failed
      </span>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Swaps on the Uniswap Protocol can start and end with ETH. However, during the swap, ETH is wrapped into WETH.
      </span>
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap56 _justifyContent-center _alignItems-center"
      >
        <div
          align="center"
          class="c1 c2"
          gap="sm"
          justify="center"
        >
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 ABC
          </div>
          <svg
            fill="none"
            height="12px"
            stroke="#131313"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
            <polyline
              points="12 5 19 12 12 19"
            />
          </svg>
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 DEF
          </div>
        </div>
        <div
          class="is_TouchableTextLink _transform-0active-scale11281 _containerType-_platformweb_normal _outlineColor-0focus-visible-neutral3 _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-transparent _cursor-pointer _outlineStyle-none _borderTopLeftRadius-t-radius-no3511 _borderTopRightRadius-t-radius-no3511 _borderBottomRightRadius-t-radius-no3511 _borderBottomLeftRadius-t-radius-no3511 t_group_item"
          role="button"
          tabindex="-1"
        >
          <a
            class="font_button _color-0focus-accent1Hove112785 _textDecorationColor-0focus-accent1Hove112785 _textDecorationLine-0focus-underline _textDecorationDistance-0focus-1px _color-_groupitem-focusVisible_accent1Hove112785 _textDecorationColor-_groupitem-focusVisible_accent1Hove112785 _textDecorationLine-_groupitem-focusVisible_underline _textDecorationDistance-_groupitem-focusVisible_1px _color-_groupitem-hover_accent1Hove112785 _textUnderlinePosition-_platformweb_from-font _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-accent1 _fontFamily-f-family _wordWrap-break-word _textDecorationLine-none _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _outlineStyle-none _textAlign-center"
            data-disable-theme="true"
            href="https://support.uniswap.org/hc/en-us/articles/16015852009997-Why-do-ETH-swaps-involve-converting-to-WETH?product_link=web"
            role="link"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <button
        class="is_Button  t_group_item"
        dd-action-name="Try again"
        style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 12px 16px 12px 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; gap: 8px; min-height: 48px; margin-top: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
      >
        <span
          class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
          line-height-disabled="false"
        >
          Try again
        </span>
      </button>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`ConfirmSwapModal/Error > renders %p correctly, with error= %p limit order 3 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c0 {
  height: 24px;
  width: 24px;
}

.c0 path {
  background: rgba(19, 19, 19, 0.63);
  fill: rgba(19, 19, 19, 0.63);
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665593 _gap-t-space-spa94665593"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface3 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _height-t-size-spac100347366 _width-t-size-spac100347366 _alignItems-center _justifyContent-center _mb-t-space-spa94665589"
      >
        <svg
          class="c0"
          data-testid="pending-modal-failure-icon"
          fill="rgba(19, 19, 19, 0.63)"
          viewBox="0 0 28 28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m25.2086 20.0103-7.7081-14.41555c-1.4933-2.793-5.5055-2.793-7 0l-7.70806 14.41555c-1.36966 2.562.49005 5.6559 3.40088 5.6559h15.61438c2.9097 0 4.7706-3.095 3.4009-5.6559zm-12.0831-8.3441c0-.483.392-.875.875-.875s.875.392.875.875v4.6667c0 .483-.392.875-.875.875s-.875-.392-.875-.875zm.8984 9.3333c-.644 0-1.1727-.5226-1.1727-1.1666s.517-1.1667 1.161-1.1667h.0117c.6452 0 1.1667.5227 1.1667 1.1667s-.5227 1.1666-1.1667 1.1666z"
            fill="#9b9b9b"
          />
        </svg>
      </div>
      <span
        class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-t-space-spa94665593 _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _lineHeight-f-lineHeigh1262266530 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Limit failed
      </span>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      />
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap56 _justifyContent-center _alignItems-center"
      >
        <div
          align="center"
          class="c1 c2"
          gap="sm"
          justify="center"
        >
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-16px _justifyContent-center _pointerEvents-auto _width-16px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-8px _borderTopRightRadius-8px _borderBottomRightRadius-8px _borderBottomLeftRadius-8px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="16"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                style="object-fit: contain; border-radius: 8px; z-index: 1;"
                width="16"
              />
            </div>
          </div>
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 DAI
          </div>
          <svg
            fill="none"
            height="12px"
            stroke="#131313"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
            <polyline
              points="12 5 19 12 12 19"
            />
          </svg>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-16px _justifyContent-center _pointerEvents-auto _width-16px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-8px _borderTopRightRadius-8px _borderBottomRightRadius-8px _borderBottomLeftRadius-8px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="16"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                style="object-fit: contain; border-radius: 8px; z-index: 1;"
                width="16"
              />
            </div>
          </div>
          <div
            class="c3 css-142zc9n"
          >
            0.0001 USDC
          </div>
        </div>
        <div
          class="is_TouchableTextLink _transform-0active-scale11281 _containerType-_platformweb_normal _outlineColor-0focus-visible-neutral3 _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-transparent _cursor-pointer _outlineStyle-none _borderTopLeftRadius-t-radius-no3511 _borderTopRightRadius-t-radius-no3511 _borderBottomRightRadius-t-radius-no3511 _borderBottomLeftRadius-t-radius-no3511 t_group_item"
          role="button"
          tabindex="-1"
        >
          <a
            class="font_button _color-0focus-accent1Hove112785 _textDecorationColor-0focus-accent1Hove112785 _textDecorationLine-0focus-underline _textDecorationDistance-0focus-1px _color-_groupitem-focusVisible_accent1Hove112785 _textDecorationColor-_groupitem-focusVisible_accent1Hove112785 _textDecorationLine-_groupitem-focusVisible_underline _textDecorationDistance-_groupitem-focusVisible_1px _color-_groupitem-hover_accent1Hove112785 _textUnderlinePosition-_platformweb_from-font _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-accent1 _fontFamily-f-family _wordWrap-break-word _textDecorationLine-none _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _outlineStyle-none _textAlign-center"
            data-disable-theme="true"
            href="https://support.uniswap.org/hc/en-us/articles/24300813697933-Why-did-my-limit-order-fail-or-not-execute?product_link=web"
            role="link"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <button
        class="is_Button  t_group_item"
        dd-action-name="Try again"
        style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 12px 16px 12px 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; gap: 8px; min-height: 48px; margin-top: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
      >
        <span
          class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
          line-height-disabled="false"
        >
          Try again
        </span>
      </button>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`ConfirmSwapModal/Error > renders %p correctly, with error= %p limit order 4 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.c3 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c0 {
  height: 24px;
  width: 24px;
}

.c0 path {
  background: rgba(19, 19, 19, 0.63);
  fill: rgba(19, 19, 19, 0.63);
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _pt-t-space-spa94665593 _pr-t-space-spa94665593 _pb-t-space-spa94665593 _pl-t-space-spa94665593 _gap-t-space-spa94665593"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-surface3 _borderTopLeftRadius-t-radius-ro291586453 _borderTopRightRadius-t-radius-ro291586453 _borderBottomRightRadius-t-radius-ro291586453 _borderBottomLeftRadius-t-radius-ro291586453 _height-t-size-spac100347366 _width-t-size-spac100347366 _alignItems-center _justifyContent-center _mb-t-space-spa94665589"
      >
        <svg
          class="c0"
          data-testid="pending-modal-failure-icon"
          fill="rgba(19, 19, 19, 0.63)"
          viewBox="0 0 28 28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m25.2086 20.0103-7.7081-14.41555c-1.4933-2.793-5.5055-2.793-7 0l-7.70806 14.41555c-1.36966 2.562.49005 5.6559 3.40088 5.6559h15.61438c2.9097 0 4.7706-3.095 3.4009-5.6559zm-12.0831-8.3441c0-.483.392-.875.875-.875s.875.392.875.875v4.6667c0 .483-.392.875-.875.875s-.875-.392-.875-.875zm.8984 9.3333c-.644 0-1.1727-.5226-1.1727-1.1666s.517-1.1667 1.161-1.1667h.0117c.6452 0 1.1667.5227 1.1667 1.1667s-.5227 1.1666-1.1667 1.1666z"
            fill="#9b9b9b"
          />
        </svg>
      </div>
      <span
        class="font_subHeading _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-t-space-spa94665593 _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _lineHeight-f-lineHeigh1262266530 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Wrap failed
      </span>
      <span
        class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-smal108 _lineHeight-f-lineHeigh1269072494 _fontWeight-f-weight-bo3548"
        data-disable-theme="true"
      >
        Swaps on the Uniswap Protocol can start and end with ETH. However, during the swap, ETH is wrapped into WETH.
      </span>
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap56 _justifyContent-center _alignItems-center"
      >
        <div
          align="center"
          class="c1 c2"
          gap="sm"
          justify="center"
        >
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-16px _justifyContent-center _pointerEvents-auto _width-16px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-8px _borderTopRightRadius-8px _borderBottomRightRadius-8px _borderBottomLeftRadius-8px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="16"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                style="object-fit: contain; border-radius: 8px; z-index: 1;"
                width="16"
              />
            </div>
          </div>
          <div
            class="c3 css-142zc9n"
          >
            &lt;0.00001 DAI
          </div>
          <svg
            fill="none"
            height="12px"
            stroke="#131313"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
            <polyline
              points="12 5 19 12 12 19"
            />
          </svg>
          <div
            class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-16px _justifyContent-center _pointerEvents-auto _width-16px _position-relative"
            data-testid="token-logo"
          >
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-8px _borderTopRightRadius-8px _borderBottomRightRadius-8px _borderBottomLeftRadius-8px"
            />
            <div
              class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              data-testid="img-token-image"
            >
              <img
                height="16"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                style="object-fit: contain; border-radius: 8px; z-index: 1;"
                width="16"
              />
            </div>
          </div>
          <div
            class="c3 css-142zc9n"
          >
            0.0001 USDC
          </div>
        </div>
        <div
          class="is_TouchableTextLink _transform-0active-scale11281 _containerType-_platformweb_normal _outlineColor-0focus-visible-neutral3 _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _backgroundColor-transparent _cursor-pointer _outlineStyle-none _borderTopLeftRadius-t-radius-no3511 _borderTopRightRadius-t-radius-no3511 _borderBottomRightRadius-t-radius-no3511 _borderBottomLeftRadius-t-radius-no3511 t_group_item"
          role="button"
          tabindex="-1"
        >
          <a
            class="font_button _color-0focus-accent1Hove112785 _textDecorationColor-0focus-accent1Hove112785 _textDecorationLine-0focus-underline _textDecorationDistance-0focus-1px _color-_groupitem-focusVisible_accent1Hove112785 _textDecorationColor-_groupitem-focusVisible_accent1Hove112785 _textDecorationLine-_groupitem-focusVisible_underline _textDecorationDistance-_groupitem-focusVisible_1px _color-_groupitem-hover_accent1Hove112785 _textUnderlinePosition-_platformweb_from-font _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-accent1 _fontFamily-f-family _wordWrap-break-word _textDecorationLine-none _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _outlineStyle-none _textAlign-center"
            data-disable-theme="true"
            href="https://support.uniswap.org/hc/en-us/articles/16015852009997-Why-do-ETH-swaps-involve-converting-to-WETH?product_link=web"
            role="link"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <button
        class="is_Button  t_group_item"
        dd-action-name="Try again"
        style="display: flex; flex-basis: 0px; box-sizing: border-box; position: relative; min-width: 0px; flex-shrink: 1; flex-direction: row; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; align-items: center; justify-content: center; background-color: rgba(19, 19, 19, 0.08); border-top-color: transparent; border-right-color: transparent; border-bottom-color: transparent; border-left-color: transparent; cursor: pointer; height: auto; align-self: stretch; flex-grow: 1; outline-color: rgba(0, 0, 0, 0); padding: 12px 16px 12px 16px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; gap: 8px; min-height: 48px; margin-top: 8px; border-bottom-style: solid; border-top-style: solid; border-left-style: solid; border-right-style: solid; transform: [object Object];"
      >
        <span
          class="font_button _color-_groupitem-hover_neutral1Hov3121676 _display-inline _boxSizing-border-box _wordWrap-break-word _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _maxWidth-10037 _overflowX-hidden _overflowY-hidden _textOverflow-ellipsis _textAlign-center _fontSize-f-size-medi3736 _fontWeight-f-weight-me3083741 _lineHeight-f-lineHeigh1262266530"
          line-height-disabled="false"
        >
          Try again
        </span>
      </button>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
